Add script which generates CV and syllabus PDFs and moves into assets

--- a/.gitignore
+++ b/.gitignore
@@ -68,5 +68,8 @@ _examples
 .vscode
 Scratch
 
+# Generated files
 nick_derobertis_site/styles.css
 nick_derobertis_site/styles.css.map
+Documents
+nick_derobertis_site/assets/pdfs/generated
