Install awscli in deployment container

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -2,4 +2,8 @@ FROM python:3.7
 
 WORKDIR /home/docker
 
+COPY build-scripts build-scripts
+
+RUN build-scripts/install-awscli.sh
+
 ENTRYPOINT 'bash'
