--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -5,5 +5,12 @@ WORKDIR /home/docker
 COPY build-scripts build-scripts
 
 RUN build-scripts/install-awscli.sh
+RUN build-scripts/install-nodejs.sh
+RUN build-scripts/install-aws-cdk.sh
 
-ENTRYPOINT 'bash'
+COPY cdk_files cdk_files
+
+COPY entrypoint.sh .
+
+ENTRYPOINT ["/home/docker/entrypoint.sh"]
+CMD ["bash"]
