--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+"aws_cdk.aws_ec2" = "*"
+"aws_cdk.aws_ecs" = "*"
+"aws_cdk.aws_iam" = "*"
+"aws_cdk.aws_ecr" = "*"
 
 [packages]
 sphinx = "*"
