--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3.7"
 services:
   deploy:
-    build: .
+    build:
+      context: .
     volumes:
       - .:/home/docker
     env_file:
