Make task-def.json point to created role by generating it via template and aws root account id

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,6 +34,10 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 1
+      matrix:
+        python-version: [ 3.7 ]
 
     steps:
     - name: Checkout
@@ -45,6 +49,15 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
+    - name: Install dependencies
+        run: |
+          pipenv sync
+    - name: Create ECR task definition JSON
+        run: |
+          pipenv run python deploy/create_task_def.py
+        env:
+          AWS_ROOT_ACCOUNT_ID: ${{ secrets.AWS_ROOT_ACCOUNT_ID }}
+          DEPLOY_APP_NAME: nick-derobertis-site
 
     - name: Login to Amazon ECR
       id: login-ecr
