--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -49,6 +49,12 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install Pipenv
+      uses: dschep/install-pipenv-action@v1
     - name: Install dependencies
       run: |
         pipenv sync
