Large restructure to deployment settings. More settings, pydantic model and validation. Also add load balancing and auto scaling

--- a/deploy/.env.template
+++ b/deploy/.env.template
@@ -6,3 +6,12 @@ AWS_ROOT_ACCOUNT_ID=
 
 # App settings
 DEPLOY_APP_NAME=
+
+# Deployment settings
+DEPLOY_IS_PUBLIC=true
+
+## Autoscaling settings
+DEPLOY_AUTOSCALE_COUNT_LIMIT=3
+DEPLOY_AUTOSCALE_CPU_PCT_LIMIT=50
+DEPLOY_AUTOSCALE_MEMORY_PCT_LIMIT=50
+DEPLOY_AUTOSCALE_REQUEST_COUNT_LIMIT=1000
