--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -60,10 +60,12 @@ jobs:
         pipenv sync
     - name: Create ECR task definition JSON
       run: |
-        pipenv run python deploy/create_task_def.py
+        pipenv run python -m deploy.create_task_def
       env:
         AWS_ROOT_ACCOUNT_ID: ${{ secrets.AWS_ROOT_ACCOUNT_ID }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
         DEPLOY_APP_NAME: nick-derobertis-site
+        DEPLOY_APP_SHORT_NAME: nds
 
     - name: Login to Amazon ECR
       id: login-ecr
