Add health check settings and make health check optional

--- a/deploy/.env.template
+++ b/deploy/.env.template
@@ -11,6 +11,11 @@ DEPLOY_APP_SHORT_NAME=
 # Deployment settings
 DEPLOY_IS_PUBLIC=true
 
+# Health check settings
+DEPLOY_HEALTH_CHECK_ENABLE=true
+DEPLOY_HEALTH_CHECK_PATH=/
+DEPLOY_HEALTH_CHECK_INTERVAL_MINUTES=1
+
 ## Autoscaling settings
 DEPLOY_AUTOSCALE_COUNT_LIMIT=3
 DEPLOY_AUTOSCALE_CPU_PCT_LIMIT=50
