--- a/deploy/.env.template
+++ b/deploy/.env.template
@@ -7,6 +7,8 @@ AWS_ROOT_ACCOUNT_ID=
 # App settings
 DEPLOY_APP_NAME=
 DEPLOY_APP_SHORT_NAME=
+DEPLOY_URL=
+DEPLOY_INCLUDE_WWW=true
 
 # Deployment settings
 DEPLOY_IS_PUBLIC=true
