WIP on getting SSL certificate to actually work. Restructure to create Route53 in a separate stack and then update name servers with boto. Add boto type annotations

--- a/deploy/.env.template
+++ b/deploy/.env.template
@@ -12,11 +12,12 @@ DEPLOY_INCLUDE_WWW=true
 
 # Deployment settings
 DEPLOY_IS_PUBLIC=true
+DEPLOY_NAME_SERVERS=null
 
 # Health check settings
 DEPLOY_HEALTH_CHECK_PATH=/
 DEPLOY_HEALTH_CHECK_INTERVAL_MINUTES=1
-DEPLOY_HEALTH_CHECK_HEALTHY_HTTP_CODES=200
+DEPLOY_HEALTH_CHECK_HEALTHY_HTTP_CODES=[200]
 DEPLOY_HEALTH_CHECK_TIMEOUT_SECONDS=30
 
 ## Autoscaling settings
