Restructure to be able to flexibly deploy without SSL and without URL/Route53

--- a/deploy/.env.template
+++ b/deploy/.env.template
@@ -9,6 +9,7 @@ DEPLOY_APP_NAME=
 DEPLOY_APP_SHORT_NAME=
 DEPLOY_URL=
 DEPLOY_INCLUDE_WWW=true
+DEPLOY_INCLUDE_SSL=true
 
 # Deployment settings
 DEPLOY_IS_PUBLIC=true
