Generate SSH keys and add to AWS parameter store

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,8 @@ Documents
 nick_derobertis_site/assets/pdfs/generated
 deploy/deploy-cdk
 **/task-def.json
+deploy/id_rsa
+deploy/id_rsa.pub
 
 # Environment files
 deploy/.env
