Add deployment option for whether to assign public IP to containers

--- a/deploy/.env.template
+++ b/deploy/.env.template
@@ -10,6 +10,7 @@ DEPLOY_APP_SHORT_NAME=
 DEPLOY_URL=
 DEPLOY_INCLUDE_WWW=true
 DEPLOY_INCLUDE_SSL=true
+DEPLOY_CONTAINER_PUBLIC_IP=true
 
 # Deployment settings
 DEPLOY_IS_PUBLIC=true
