--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -48,7 +48,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+        aws-region: us-west-1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
