--- a/frontend/nick-derobertis-site/angular.json
+++ b/frontend/nick-derobertis-site/angular.json
@@ -55,6 +55,34 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "development": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
           }
         },
@@ -66,6 +94,9 @@
           "configurations": {
             "production": {
               "browserTarget": "nick-derobertis-site:build:production"
+            },
+            "development": {
+              "browserTarget": "nick-derobertis-site:build:development"
             }
           }
         },
@@ -108,6 +139,9 @@
           "configurations": {
             "production": {
               "devServerTarget": "nick-derobertis-site:serve:production"
+            },
+            "development": {
+              "devServerTarget": "nick-derobertis-site:serve:development"
             }
           }
         },
@@ -129,6 +163,17 @@
               ],
               "sourceMap": false,
               "optimization": true
+            },
+            "development": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ],
+              "sourceMap": false,
+              "optimization": true
             }
           }
         },
@@ -142,6 +187,10 @@
             "production": {
               "browserTarget": "nick-derobertis-site:build:production",
               "serverTarget": "nick-derobertis-site:server:production"
+            },
+            "development": {
+              "browserTarget": "nick-derobertis-site:build:development",
+              "serverTarget": "nick-derobertis-site:server:development"
             }
           }
         },
@@ -153,7 +202,8 @@
             "routes": ["/"]
           },
           "configurations": {
-            "production": {}
+            "production": {},
+            "development": {}
           }
         }
       }
