--- a/frontend/nick-derobertis-site/package.json
+++ b/frontend/nick-derobertis-site/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-server": "~10.1.1",
     "@angular/router": "~10.1.1",
     "@nguniversal/express-engine": "^10.1.0",
+    "@sentry/angular": "^5.23.0",
+    "@sentry/tracing": "^5.23.0",
     "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
