--- a/Pipfile
+++ b/Pipfile
@@ -32,7 +32,7 @@ fire = "*"
 derobertis-cv = "*"
 pydantic = "*"
 fastapi = "*"
-uvicorn = "*"
+uvicorn = "==0.11.8"
 pydantic-to-typescript = "*"
 sentry-sdk = "*"
 
