Update CI to python 3.8

--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -17,11 +17,11 @@ on:
 jobs:
   test:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       max-parallel: 1
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
 
     steps:
       - name: Dump GitHub context
@@ -52,14 +52,14 @@ jobs:
         run: |
           pipenv run mypy $(python directory.py)
   automerge:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: test
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Python 3.7
+      - name: Set up Python 3.8
         uses: actions/setup-python@v1
         with:
-          python-version: 3.7
+          python-version: 3.8
       - name: Check if maintainer
         env:
           GITHUB_PR_USER: ${{ github.actor }}
@@ -101,7 +101,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
     steps:
       - uses: actions/checkout@v1
         with:
@@ -124,11 +124,11 @@ jobs:
 
   deploy:
     needs: automerge
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       max-parallel: 1
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
     steps:
       - uses: actions/checkout@v1
         with:
