--- a/Pipfile
+++ b/Pipfile
@@ -32,7 +32,7 @@ fire = "*"
 derobertis-cv = "*"
 pydantic = "*"
 fastapi = "*"
-uvicorn = "==0.11.8"
+uvicorn = {extras = ["standard"], version = "*"}
 pydantic-to-typescript = "*"
 sentry-sdk = "*"
 
