feat: Remaining updates to get fully working locally with updated template and packages

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,8 @@
 
+if [ ! -f .env.sh ]; then
+  cp .env.template.sh .env.sh
+fi
+
 source_env ./scripts/setup-repo.sh
 source_env ./scripts/asdf-install.sh
 source_env ./scripts/install-just.sh
