--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "husky": "^7.0.4",
+    "json-schema-to-typescript": "^13.1.1",
     "lint-staged": "^12.4.1"
   },
   "lint-staged": {
