--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[project]
+name = "nick-derobertis-site"
+version = "1.0.0"
+
 [tool.poetry]
 name = "nick-derobertis-site"
 version = "1.0.0"
@@ -33,6 +37,9 @@ python = ">=3.10"
 [tool.poetry.group.test.dependencies]
 pytest = "*"
 pytest-cov = "*"
+
+[tool.setuptools]
+packages = ["nick_derobertis_site"]
 
 [tool.black]
 include = 'nick_derobertis_site.*\.pyi?$|tests.*\.pyi?$'
