--- a/.github/actions/e2e-test/action.yml
+++ b/.github/actions/e2e-test/action.yml
@@ -8,12 +8,16 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
       with:
         python-version: "3.11"
         cache: pip
         cache-dependency-path: global-requirements.txt
+    - name: Install Global Dependencies
+      shell: bash
+      run: |
+        pip install -r global-requirements.txt
     - name: Install Just command runner
       uses: taiki-e/install-action@v2
       with:
@@ -24,7 +28,7 @@ runs:
       with:
         path: e2e/.venv
         key: ${{ env.pythonLocation }}-venvs-${{ hashFiles('e2e/poetry.lock') }}
-    - name: Create venvs
+    - name: Create venv
       shell: bash
       working-directory: e2e
       if: steps.cache-venvs.outputs.cache-hit != 'true'
